[gd_scene load_steps=4 format=3 uid="uid://dmqkm4obw8wdx"]

[ext_resource type="Script" path="res://intro.gd" id="1_o11sf"]
[ext_resource type="PackedScene" uid="uid://beoofw6gnd2vs" path="res://croco_panel.tscn" id="2_eogdp"]
[ext_resource type="AudioStream" uid="uid://bsfs8l3b57ygc" path="res://audio/intro_hard_casting.wav" id="3_7cxeu"]

[node name="intro" type="Node2D"]
scale = Vector2(0.555, 0.555)
script = ExtResource("1_o11sf")

[node name="croco_panel" parent="." instance=ExtResource("2_eogdp")]

[node name="skippy_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7cxeu")
autoplay = true

[connection signal="timeout" from="skippy_timer" to="." method="_on_skippy_timer_timeout"]
